# Compu2

Parcial1/Billar/: CMakeLists.txt  Doxyfile  README.md  main.cpp
Parcial1/Billar/documents/html/: Bola_8cpp.html  Bola_8cpp__incl.map  Bola_8cpp__incl.md5  Bola_8h.html  Bola_8h.js  Bola_8h__dep__incl.map  Bola_8h__dep__incl.md5  Bola_8h__incl.map  Bola_8h__incl.md5  Bola_8h_source.html  Caja_8cpp.html  Caja_8cpp__incl.map  Caja_8cpp__incl.md5  Caja_8h.html  Caja_8h.js  Caja_8h__dep__incl.map  Caja_8h__dep__incl.md5  Caja_8h_source.html  Sistema_8cpp.html  Sistema_8cpp__incl.map  Sistema_8cpp__incl.md5  Sistema_8h.html  Sistema_8h.js  Sistema_8h__dep__incl.map  Sistema_8h__dep__incl.md5  Sistema_8h__incl.map  Sistema_8h__incl.md5  Sistema_8h_source.html  annotated.html  annotated_dup.js  classBola-members.html  classBola.html  classBola.js  classBola_a2fd6de1df92adc47882e7d9a32da0ec5_cgraph.map  classBola_a2fd6de1df92adc47882e7d9a32da0ec5_cgraph.md5  classBola_a593052a47503dd40e15603215b307825_cgraph.map  classBola_a593052a47503dd40e15603215b307825_cgraph.md5  classCaja-members.html  classCaja.html  classCaja.js  (+28 more)
Parcial1/Billar/documents/latex/: Bola_8cpp.tex  Bola_8cpp__incl.md5  Bola_8h.tex  Bola_8h__dep__incl.md5  Bola_8h__incl.md5  Bola_8h_source.tex  Caja_8cpp.tex  Caja_8cpp__incl.md5  Caja_8h.tex  Caja_8h__dep__incl.md5  Caja_8h_source.tex  Sistema_8cpp.tex  Sistema_8cpp__incl.md5  Sistema_8h.tex  Sistema_8h__dep__incl.md5  Sistema_8h__incl.md5  Sistema_8h_source.tex  annotated.tex  classBola.tex  classBola_a2fd6de1df92adc47882e7d9a32da0ec5_cgraph.md5  classBola_a593052a47503dd40e15603215b307825_cgraph.md5  classCaja.tex  classCaja_a9cd8809c372b290af430b7d8ce2c3e03_icgraph.md5  classCaja_ab2f4a60f732d4d729ccc27156da20741_icgraph.md5  classCaja_ad0091ef14592dfd7bdb685c5666220dc_icgraph.md5  classSistema.tex  classSistema_adb2b5a979b87479863df1c5fe6f97bd3_cgraph.md5  classSistema_af7686509bf666db925fc410868e072a6_cgraph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
Parcial1/Billar/include/: Bola.h  Caja.h  Sistema.h
Parcial1/Billar/scripts/: graficar.gnuplot  graficar.py
Parcial1/Billar/src/: Bola.cpp  Caja.cpp  Sistema.cpp
Parcial1/N-Particulas/: CMakeLists.txt  Doxyfile
Parcial1/N-Particulas/docs/html/: Bola_8cpp.html  Bola_8cpp__incl.map  Bola_8cpp__incl.md5  Bola_8h.html  Bola_8h__dep__incl.map  Bola_8h__dep__incl.md5  Bola_8h__incl.map  Bola_8h__incl.md5  Bola_8h_source.html  Caja_8cpp.html  Caja_8cpp__incl.map  Caja_8cpp__incl.md5  Caja_8h.html  Caja_8h__dep__incl.map  Caja_8h__dep__incl.md5  Caja_8h_source.html  Sistema_8cpp.html  Sistema_8cpp__incl.map  Sistema_8cpp__incl.md5  Sistema_8h.html  Sistema_8h__dep__incl.map  Sistema_8h__dep__incl.md5  Sistema_8h__incl.map  Sistema_8h__incl.md5  Sistema_8h_source.html  annotated.html  classBola-members.html  classBola.html  classCaja-members.html  classCaja.html  classSistema-members.html  classSistema.html  classSistema__coll__graph.map  classSistema__coll__graph.md5  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  (+9 more)
Parcial1/N-Particulas/docs/latex/: Bola_8cpp.tex  Bola_8cpp__incl.md5  Bola_8h.tex  Bola_8h__dep__incl.md5  Bola_8h__incl.md5  Bola_8h_source.tex  Caja_8cpp.tex  Caja_8cpp__incl.md5  Caja_8h.tex  Caja_8h__dep__incl.md5  Caja_8h_source.tex  Sistema_8cpp.tex  Sistema_8cpp__incl.md5  Sistema_8h.tex  Sistema_8h__dep__incl.md5  Sistema_8h__incl.md5  Sistema_8h_source.tex  annotated.tex  classBola.tex  classCaja.tex  classSistema.tex  classSistema__coll__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex
Parcial1/N-Particulas/include/: Bola.h  Caja.h  Sistema.h
Parcial1/N-Particulas/scripts/gnuplot/: plot.gp
Parcial1/N-Particulas/scripts/python/: plot.py
Parcial1/N-Particulas/src/: Bola.cpp  Caja.cpp  Sistema.cpp  main.cpp
Parcial1/VanderPol/: CMakeLists.txt  Doxyfile  README.md
Parcial1/VanderPol/Documentación/: Análisis.ipynb
Parcial1/VanderPol/Documentación/.ipynb_checkpoints/: Análisis-checkpoint.ipynb
Parcial1/VanderPol/docs/html/: Sistema_8cpp.html  Sistema_8cpp__incl.map  Sistema_8cpp__incl.md5  Sistema_8h.html  Sistema_8h__dep__incl.map  Sistema_8h__dep__incl.md5  Sistema_8h__incl.map  Sistema_8h__incl.md5  Sistema_8h_source.html  VanDerPol_8cpp.html  VanDerPol_8cpp__incl.map  VanDerPol_8cpp__incl.md5  VanDerPol_8h.html  VanDerPol_8h__dep__incl.map  VanDerPol_8h__dep__incl.md5  VanDerPol_8h_source.html  _formulas.dvi  _formulas.tex  annotated.html  classSistema-members.html  classSistema.html  classSistema__coll__graph.map  classSistema__coll__graph.md5  classVanDerPol-members.html  classVanDerPol.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html
Parcial1/VanderPol/docs/latex/: Sistema_8cpp.tex  Sistema_8cpp__incl.md5  Sistema_8h.tex  Sistema_8h__dep__incl.md5  Sistema_8h__incl.md5  Sistema_8h_source.tex  VanDerPol_8cpp.tex  VanDerPol_8cpp__incl.md5  VanDerPol_8h.tex  VanDerPol_8h__dep__incl.md5  VanDerPol_8h_source.tex  annotated.tex  classSistema.tex  classSistema__coll__graph.md5  classVanDerPol.tex  (+3 more)
Parcial1/VanderPol/documents/: Análisis.ipynb
Parcial1/VanderPol/include/: Sistema.h  VanDerPol.h
Parcial1/VanderPol/results/: datos.txt  dt_validation.txt  lyapunov_final.txt  lyapunov_progress.txt  poincare.txt
Parcial1/VanderPol/src/: Sistema.cpp  VanDerPol.cpp  main.cpp
Parcial1/proyecto_molecular/: CMakeLists.txt  main.cpp
Parcial1/proyecto_molecular/include/: Bola.h  Caja.h  Sistema.h
Parcial1/proyecto_molecular/scripts/: graficar_gnuplot.pg  graficar_python.py  graficar_simple.gp
Parcial1/proyecto_molecular/src/: Bola.cpp  Caja.cpp  Sistema.cpp
(+69 files in other folders)
